# myfunx

./: README.md  pyproject.toml  requirements.txt  version.py
docs/source/: client.rst  conf.py  index.rst  installation.rst  json_manager.rst  requirements.txt
myfunx/: __init__.py  client.py  json_manager.py  utils.py  x.py
