[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myfunx"
version = "0.2.1"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
authors = [
    {name = "unixtux"}
]
dependencies = [
    "aiotgm"
]

[tool.setuptools]
packages = ["myfunx"]
