[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myfunx"
version = "0.5.2"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
authors = [
    {name = "unixtux"}
]
dependencies = [
    "aiotgm"
]

[tool.setuptools]
packages = ["myfunx"]
